--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-s (34 sloc)  900 Bytes
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -25,6 +24,8 @@ s (34 sloc)  900 Bytes
 .idea_modules/
 .idea/
 
+*.iml
+
 # JIRA plugin
 atlassian-ide-plugin.xml
 
@@ -43,9 +44,10 @@ project/boot/
 dist/
 build/
 __pycache__/
+*.py[cod]
+*$py.class
 
 # Any kind of log file
 *.log
 
 .DS_Store
-
