--- a/.travis.yml
+++ b/.travis.yml
@@ -9,19 +9,16 @@ matrix:
     - python: "2.7"
       env:
         - SPARK_VERSION=2.3.2
-        - NUMPY_VERSION=1.11.1
         - PANDAS_VERSION=0.19.2
         - PYARROW_VERSION=0.8.0
     - python: "3.5"
       env:
         - SPARK_VERSION=2.3.2
-        - NUMPY_VERSION=1.11.1
         - PANDAS_VERSION=0.19.2
         - PYARROW_VERSION=0.8.0
     - python: "3.6"
       env:
         - SPARK_VERSION=2.4.0
-        - NUMPY_VERSION=1.14.3
         - PANDAS_VERSION=0.23.4
         - PYARROW_VERSION=0.11.1
 
@@ -47,7 +44,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose==1.3.7 flake8=3.6.0 numpy==$NUMPY_VERSION pandas==$PANDAS_VERSION pyarrow=$PYARROW_VERSION
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose==1.3.7 flake8=3.6.0 pandas==$PANDAS_VERSION pyarrow=$PYARROW_VERSION
   - source activate test-environment
 
 before_script:
