--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ cache:
 
 matrix:
   include:
-    - python: "2.7"
-      env:
-        - SPARK_VERSION=2.3.2
-        - PANDAS_VERSION=0.19.2
-        - PYARROW_VERSION=0.8.0
+#    - python: "2.7"
+#      env:
+#        - SPARK_VERSION=2.3.2
+#        - PANDAS_VERSION=0.19.2
+#        - PYARROW_VERSION=0.8.0
     - python: "3.5"
       env:
         - SPARK_VERSION=2.3.2
