--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
     - python: "3.5"
       env:
         - SPARK_VERSION=2.3.2
-        - PANDAS_VERSION=0.21.1
+        - PANDAS_VERSION=0.19.2
         - PYARROW_VERSION=0.8.0
     - python: "3.6"
       env:
@@ -46,6 +46,8 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -c conda-forge -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose==1.3.7 flake8>=3.5.0 pandas==$PANDAS_VERSION pyarrow==$PYARROW_VERSION decorator
   - source activate test-environment
+
+  - conda list
 
 before_script:
   - ./dev/lint-python
