--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,8 @@ install:
   - conda create -c conda-forge -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose==1.3.7 flake8>=3.5.0 pandas==$PANDAS_VERSION pyarrow==$PYARROW_VERSION decorator
   - source activate test-environment
 
+  - conda list
+
 before_script:
   - ./dev/lint-python
 
