--- a/.travis.yml
+++ b/.travis.yml
@@ -6,21 +6,21 @@ cache:
 
 matrix:
   include:
-    - python: "2.7"
-      env:
-        - SPARK_VERSION=2.3.2
-        - NUMPY_VERSION=1.11.1
-        - PANDAS_VERSION=0.19.2
+#    - python: "2.7"
+#      env:
+#        - SPARK_VERSION=2.3.2
+#        - PANDAS_VERSION=0.19.2
+#        - PYARROW_VERSION=0.8.0
     - python: "3.5"
       env:
         - SPARK_VERSION=2.3.2
-        - NUMPY_VERSION=1.11.1
         - PANDAS_VERSION=0.19.2
+        - PYARROW_VERSION=0.8.0
     - python: "3.6"
       env:
         - SPARK_VERSION=2.4.0
-        - NUMPY_VERSION=1.14.3
-        - PANDAS_VERSION=0.23.0
+        - PANDAS_VERSION=0.23.4
+        - PYARROW_VERSION=0.10.0
 
 before_install:
  - ./bin/download_travis_dependencies.sh
@@ -44,9 +44,13 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose==1.3.7 numpy==$NUMPY_VERSION pandas==$PANDAS_VERSION
+  - conda create -c conda-forge -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose==1.3.7 flake8>=3.5.0 pandas==$PANDAS_VERSION pyarrow==$PYARROW_VERSION decorator
   - source activate test-environment
 
+  - conda list
+
+before_script:
+  - ./dev/lint-python
+
 script:
-  # - SPARK_HOME="$HOME/.cache/spark-versions/spark-$SPARK_VERSION-bin-hadoop2.7" ./bin/run-tests.sh
-  echo "Run Tests"
+  - SPARK_HOME="$HOME/.cache/spark-versions/spark-$SPARK_VERSION-bin-hadoop2.7" ./dev/run-tests.sh
