--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -c conda-forge -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose==1.3.7 pandas==$PANDAS_VERSION pyarrow==$PYARROW_VERSION
   - conda activate test-environment
-  - conda install -c conda-forge --yes -n test-environment --file requirements-dev.txt
+  - conda install -c conda-forge --yes --file requirements-dev.txt
 
   - conda list
 
