--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,12 @@ matrix:
     - python: "3.5"
       env:
         - SPARK_VERSION=2.3.3
-        - PANDAS_VERSION=0.24.2
+        - PANDAS_VERSION=0.23.4
         - PYARROW_VERSION=0.10.0
     - python: "3.6"
       env:
         - SPARK_VERSION=2.4.1
-        - PANDAS_VERSION=0.23.4
+        - PANDAS_VERSION=0.24.2
         - PYARROW_VERSION=0.10.0
 
 before_install:
@@ -44,7 +44,9 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -c conda-forge -q -n test-environment python=$TRAVIS_PYTHON_VERSION nose==1.3.7 pandas==$PANDAS_VERSION pyarrow==$PYARROW_VERSION
+  - conda config --env --add pinned_packages pandas==$PANDAS_VERSION
+  - conda config --env --add pinned_packages pyarrow==$PYARROW_VERSION
+  - conda create -c conda-forge -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - conda activate test-environment
   - conda install -c conda-forge --yes --file requirements-dev.txt
 
