--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,8 +4,8 @@
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
-SOURCEDIR     = .
-BUILDDIR      = _build
+SOURCEDIR     = source
+BUILDDIR      = build
 
 export PYTHONPATH := $(realpath ..):$(PYTHONPATH)
 
