--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,3 @@
-nose==1.3.7
 flake8>=3.5.0
 pandas>=0.23
 pyarrow>=0.10,<0.11
@@ -7,3 +6,4 @@ sphinx==2.0.1
 nbsphinx==0.4.2
 numpydoc==0.8.0
 mypy==0.701
+pytest==4.4.1
