--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,17 @@
-flake8>=3.5.0
+# Dependencies in Koalas
 pandas>=0.23
 pyarrow>=0.10,<0.11
 decorator
-sphinx==2.0.1
-nbsphinx==0.4.2
-numpydoc==0.8.0
-mypy==0.701
-pytest==4.4.1
+
+# Documentation build
+sphinx>=2.0.1
+nbsphinx>=0.4.2
+numpydoc>=0.8.0
+
+# Linter
+mypy>=0.701
+flake8>=3.5.0
+
+# Test
+pytest>=4.4.1
+pytest-cov>=2.6.1
