--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,9 @@ install:
 
   # Show installed packages
   - conda list
+  -
+  # Useful for to_clipboard test
+  - sudo apt-get install xclip
 
 before_script:
   - export SPARK_HOME="$HOME/.cache/spark-versions/spark-$SPARK_VERSION-bin-hadoop2.7"
