--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,8 +2,6 @@
 pandas>=0.23
 pyarrow>=0.10,<0.11
 numpy>=1.14
-openpyxl>=2.6.2
-xlrd>=0.9.0
 
 # Documentation build
 sphinx
@@ -17,3 +15,5 @@ flake8
 # Test
 pytest
 pytest-cov
+openpyxl
+xlrd
