DataFrame.to_clipboard & Series.to_clipboard (#257)
Add `DataFrame.to_clipboard` and `Series.to_clipboard`. Part of #169.

Improve `validate_arguments_and_invoke_function()`  when receiving argument `**kwargs`
+ actual args : `{'kwargs': {'index': False}, 'sep': ',', 'excel': True}`
+ expected args : `{'sep': ',', 'excel': True, 'index': False}`

--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,10 @@ install:
   # Show installed packages
   - conda list
 
+  # Useful for to_clipboard test
+  - export DISPLAY=:0.0
+  - sudo apt-get install xclip
+
 before_script:
   - export SPARK_HOME="$HOME/.cache/spark-versions/spark-$SPARK_VERSION-bin-hadoop2.7"
   - ./dev/lint-python
