--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,6 @@ cache:
 
 matrix:
   include:
-#    - python: "2.7"
-#      env:
-#        - SPARK_VERSION=2.3.2
-#        - PANDAS_VERSION=0.19.2
-#        - PYARROW_VERSION=0.8.0
     - python: "3.5"
       env:
         - SPARK_VERSION=2.3.3
@@ -22,7 +17,12 @@ matrix:
         - SPARK_VERSION=2.4.3
         - PANDAS_VERSION=0.24.2
         - PYARROW_VERSION=0.10.0
-    - python: "3.7"
+    # When we upgrade Spark 3.0 for this, remove 'oraclejdk8'.
+    - python: 3.7
+      dist: xenial
+      sudo: true
+      jdk:
+        - oraclejdk8
       env:
         - SPARK_VERSION=2.4.3
         - PANDAS_VERSION=0.24.2
