--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -c conda-forge -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - conda activate test-environment
-  - conda config --env --add pinned_packages python==$TRAVIS_PYTHON_VERSION
+  - conda config --env --add pinned_packages python=$TRAVIS_PYTHON_VERSION
   - conda config --env --add pinned_packages pandas==$PANDAS_VERSION
   - conda config --env --add pinned_packages pyarrow==$PYARROW_VERSION
   - conda install -c conda-forge --yes codecov
