Pin Python version. (#335)
* Pin Python version.

* Fix.

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,10 +52,11 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda config --env --add pinned_packages pandas==$PANDAS_VERSION
-  - conda config --env --add pinned_packages pyarrow==$PYARROW_VERSION
   - conda create -c conda-forge -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - conda activate test-environment
+  - conda config --env --add pinned_packages python=$TRAVIS_PYTHON_VERSION
+  - conda config --env --add pinned_packages pandas==$PANDAS_VERSION
+  - conda config --env --add pinned_packages pyarrow==$PYARROW_VERSION
   - conda install -c conda-forge --yes codecov
   - conda install -c conda-forge --yes --file requirements-dev.txt
 
