--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,13 @@ matrix:
         - SPARK_VERSION=2.3.3
         - PANDAS_VERSION=0.23.4
         - PYARROW_VERSION=0.10.0
+        - MLFLOW_VERSION=0.9.0
     - python: "3.6"
       env:
         - SPARK_VERSION=2.4.3
         - PANDAS_VERSION=0.24.2
         - PYARROW_VERSION=0.10.0
+        - MLFLOW_VERSION=0.9.0
     # When we upgrade Spark 3.0 for this, we could try to just use JDK 11 at 'xenial'.
     # Python 3.7 and higher are only available at this image.
     - python: 3.7
@@ -59,6 +61,8 @@ install:
   - conda config --env --add pinned_packages pyarrow==$PYARROW_VERSION
   - conda install -c conda-forge --yes codecov
   - conda install -c conda-forge --yes --file requirements-dev.txt
+  - # MLflow is not published yet on conda
+  - pip install mlflow==$MLFLOW_VERSION
 
   # Show installed packages
   - conda list
