--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,7 +2,9 @@
 pandas>=0.23
 pyarrow>=0.10
 numpy>=1.14
-mlflow
+
+# TODO: support mlflow 1.0.0
+mlflow==0.9.1
 
 # Documentation build
 sphinx==2.0.1
