--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,8 +4,8 @@ pyarrow>=0.10
 matplotlib>=3.0.0
 numpy>=1.14
 
-# TODO: support mlflow 1.0.0
-mlflow==0.9.1
+# MLflow
+mlflow>=1.0
 
 # Documentation build
 sphinx==2.0.1
@@ -19,5 +19,6 @@ flake8
 # Test
 pytest
 pytest-cov
+scikit-learn
 openpyxl
 xlrd
