Try conda 4.7 again.

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ install:
   - . $HOME/miniconda/etc/profile.d/conda.sh
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
-  # - conda update -q conda
+  - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
 
