--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,11 @@ matrix:
         - PYARROW_VERSION=0.10.0
     - python: "3.6"
       env:
+        - SPARK_VERSION=2.3.3
+        - PANDAS_VERSION=0.23.4
+        - PYARROW_VERSION=0.10.0
+    - python: "3.6"
+      env:
         - SPARK_VERSION=2.4.3
         - PANDAS_VERSION=0.24.2
         - PYARROW_VERSION=0.10.0
