--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -c conda-forge -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - conda activate test-environment
+  - conda install -c conda-forge --yes codecov
 
   # Test PyPI installation at Python 3.5. This is also because
   # one of the dependency requires Python 3.6 Conda specifically.
@@ -67,7 +68,6 @@ install:
       conda config --env --add pinned_packages python=$TRAVIS_PYTHON_VERSION && \
       conda config --env --add pinned_packages pandas==$PANDAS_VERSION && \
       conda config --env --add pinned_packages pyarrow==$PYARROW_VERSION && \
-      conda install -c conda-forge --yes codecov && \
       conda install -c conda-forge --yes --file requirements-dev.txt && \
       conda list;
     fi
