--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,15 @@ cache:
 matrix:
   include:
     - python: "3.5"
+      jdk:
+        - oraclejdk8
       env:
         - SPARK_VERSION=2.3.3
         - PANDAS_VERSION=0.23.4
         - PYARROW_VERSION=0.10.0
     - python: "3.6"
+      jdk:
+        - oraclejdk8
       env:
         - SPARK_VERSION=2.4.3
         - PANDAS_VERSION=0.24.2
