--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,20 @@ cache:
 matrix:
   include:
     - python: "3.5"
+      jdk:
+        - oraclejdk8
       env:
+        - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//')
+        - JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
         - SPARK_VERSION=2.3.3
         - PANDAS_VERSION=0.23.4
         - PYARROW_VERSION=0.10.0
     - python: "3.6"
+      jdk:
+        - oraclejdk8
       env:
+        - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//')
+        - JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
         - SPARK_VERSION=2.4.3
         - PANDAS_VERSION=0.24.2
         - PYARROW_VERSION=0.10.0
