--- a/.travis.yml
+++ b/.travis.yml
@@ -89,6 +89,7 @@ before_script:
   - export SPARK_HOME="$HOME/.cache/spark-versions/spark-$SPARK_VERSION-bin-hadoop2.7"
   - export QT_QPA_PLATFORM="offscreen"
   - ./dev/lint-python
+  - black --check koalas-dev/
 
 script:
   - ./dev/pytest
