--- a/dev/readthedocs-environment.yml
+++ b/dev/readthedocs-environment.yml
@@ -7,7 +7,8 @@ channels:
   - conda-forge
 dependencies:
   - java-jdk<=8
+  - pip
   - pip:
     # In Read the Docs, seems installing 'requirements-dev.txt' seems ignored when Conda is used.
-    - -r requirements-dev.txt
+    - -r ../requirements-dev.txt
 
