Uses PyArrow 0.15.0 in Travis CI

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
 # Dependencies in Koalas. When you update don't forget to update setup.py and install.rst in docs.
 pandas>=0.23.2
-pyarrow>=0.10,<0.15
+pyarrow>=0.10
 matplotlib>=3.0.0
 numpy>=1.14
 
