--- a/dev/readthedocs-environment.yml
+++ b/dev/readthedocs-environment.yml
@@ -3,10 +3,9 @@
 # Spark 3 will support it so we can remove this entire file
 # when we support Spark 3.
 channels:
-  - bioconda
   - conda-forge
 dependencies:
-  - java-jdk=8
+  - openjdk=8
   - pip
   - pip:
     # In Read the Docs, seems installing 'requirements-dev.txt' seems ignored when Conda is used.
