Revert "Reduce memory consumption in Read the Docs build (#1011)"
This reverts commit c04060bf35657d52ffe6601844d90a4d1ccb5a65.

--- a/dev/readthedocs-environment.yml
+++ b/dev/readthedocs-environment.yml
@@ -9,5 +9,5 @@ dependencies:
   - pip
   - pip:
     # In Read the Docs, seems installing 'requirements-dev.txt' seems ignored when Conda is used.
-    - --no-cache-dir -r ../requirements-dev.txt
+    - -r ../requirements-dev.txt
 
