--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
         - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//')
         - JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
         - SPARK_VERSION=2.3.4
-        - PANDAS_VERSION=1.0.0rc0
+        - PANDAS_VERSION=0.23.4
         - PYARROW_VERSION=0.10.0
     - python: "3.6"
       jdk:
