--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ cache:
 
 matrix:
   include:
+    # pandas>=1.0.0 doesn't support python3.5,
+    # so we just leave the existing PANDAS_VERSION for python3.5 as is.
     - python: "3.5"
       jdk:
         - oraclejdk8
@@ -38,6 +40,31 @@ matrix:
         - SPARK_VERSION=2.4.4
         - PANDAS_VERSION=1.0.0
         - PYARROW_VERSION=0.14.1
+
+    # For testing, we temporarily test pandas<1.0.0 and pandas>=1.0.0 both for python3.6 and 3.7.
+    # TODO: So, we should remove below tests before PR #1197 is merged.
+    - python: "3.6"
+      jdk:
+        - oraclejdk8
+      env:
+        - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//')
+        - JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
+        - SPARK_VERSION=2.4.4
+        - PANDAS_VERSION=0.24.2
+        - PYARROW_VERSION=0.13.0
+        - KOALAS_USAGE_LOGGER='databricks.koalas.usage_logging.usage_logger'
+    - python: 3.7
+      dist: xenial
+      sudo: true
+      jdk:
+        - oraclejdk8
+      env:
+        - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//')
+        - JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
+        - SPARK_VERSION=2.4.4
+        - PANDAS_VERSION=0.25.3
+        - PYARROW_VERSION=0.14.1
+    # TODO: Again, never forget to remove above tests before PR #1197 is merged.
 
 before_install:
   - ./dev/download_travis_dependencies.sh
